--- a/Notebooks/Modeling.ipynb
+++ b/Notebooks/Modeling.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "507df723",
+   "metadata": {},
+   "source": [
+    "### Import Required Libraries\n",
+    "Import all necessary libraries for modeling, evaluation, and interpretation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "f3e95486",
@@ -21,8 +30,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "06345892",
+   "metadata": {},
+   "source": [
+    "### Load the Cleaned Dataset\n",
+    "Load the cleaned cellphone dataset for modeling."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "96d11cb9",
    "metadata": {},
    "outputs": [
@@ -157,32 +175,56 @@
     }
    ],
    "source": [
-    "# load the dataset\n",
-    "df = pd.read_csv('C:\\\\xampp\\\\htdocs\\\\git\\\\MobilePhonePricePrediction\\\\Data\\\\Clean\\\\cleaned_cellphone.csv')\n",
+    "df = pd.read_csv('../Data/Clean/cleaned_cellphone.csv')\n",
     "df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "b8087a06",
+   "cell_type": "markdown",
+   "id": "4ed291ed",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# drop price column for features and set it as target variable\n",
-    "x = df.drop(['price', 'price_range'], axis=1) # price not used as feature\n",
-    "y = df['price'] #y as output"
+    "### Prepare Features and Target\n",
+    "Separate features and target variable for modeling."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "id": "b8087a06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df.drop(['price', 'price_range'], axis=1) \n",
+    "y = df['price'] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9f7c212",
+   "metadata": {},
+   "source": [
+    "### Split the Dataset\n",
+    "Split the data into training and testing sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7a1605e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split the dataset into training and testing sets\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37c8fc7f",
+   "metadata": {},
+   "source": [
+    "### Define Models\n",
+    "Set up different machine learning models for comparison."
    ]
   },
   {
@@ -200,8 +242,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e487147",
+   "metadata": {},
+   "source": [
+    "### Train and Evaluate Models\n",
+    "Train each model and evaluate their performance."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "f688f57e",
    "metadata": {},
    "outputs": [
@@ -234,7 +285,6 @@
     }
    ],
    "source": [
-    "# Train and evaluate each model\n",
     "for name, model in models.items():\n",
     "    model.fit(x_train, y_train)\n",
     "    y_pred = model.predict(x_test)\n",
@@ -244,8 +294,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7bbe58d",
+   "metadata": {},
+   "source": [
+    "### Visualize XGBoost Results\n",
+    "Visualize the actual vs predicted prices using XGBoost."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "78fec1fe",
    "metadata": {},
    "outputs": [
@@ -261,7 +320,6 @@
     }
    ],
    "source": [
-    "# Visualize the results for XGBoost because it's r squared score is the highest\n",
     "y_pred_xgb = models['XGBoost'].predict(x_test)\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
@@ -274,8 +332,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8d73e75",
+   "metadata": {},
+   "source": [
+    "### SHAP Explanation for XGBoost\n",
+    "Use SHAP to explain the predictions of the XGBoost model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "f2748534",
    "metadata": {},
    "outputs": [
@@ -291,7 +358,6 @@
     }
    ],
    "source": [
-    "# Using SHAP to explain the predictions of the XGBoost model\n",
     "explainer = shap.Explainer(models['XGBoost'], x_train)\n",
     "shap_values = explainer(x_test)\n",
     "\n",
@@ -299,8 +365,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f89573e",
+   "metadata": {},
+   "source": [
+    "### Tune XGBoost Model\n",
+    "Optimize the XGBoost model with better hyperparameters."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "b5d266b1",
    "metadata": {},
    "outputs": [
@@ -321,7 +396,6 @@
     }
    ],
    "source": [
-    "# Tuning the XGBoost model\n",
     "best_xgb = XGBRegressor(\n",
     "    n_estimators=200,\n",
     "    max_depth=6,\n",
@@ -341,8 +415,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7089292c",
+   "metadata": {},
+   "source": [
+    "### SHAP on Tuned XGBoost\n",
+    "Use SHAP to interpret the predictions of the optimized XGBoost model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "666f0aff",
    "metadata": {},
    "outputs": [
@@ -358,15 +441,22 @@
     }
    ],
    "source": [
-    "# Visualize the predictions of the optimized XGBoost model using shap\n",
     "explainer = shap.Explainer(best_xgb, x_train)\n",
     "shap_values = explainer(x_test)\n",
     "\n",
-    "# Create summary plot\n",
     "plt.figure()\n",
     "shap.summary_plot(shap_values, x_test, show=False)\n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30f4996e",
+   "metadata": {},
+   "source": [
+    "### Visualize Tuned XGBoost Predictions\n",
+    "Visualize actual vs predicted prices for the optimized XGBoost model."
    ]
   },
   {
@@ -394,6 +484,15 @@
     "plt.ylabel(\"Predicted Price\")\n",
     "plt.title(\"Actual vs Predicted Price (Tuned XGBoost)\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f1bf140",
+   "metadata": {},
+   "source": [
+    "### Final Visualization\n",
+    "Compare actual and predicted prices for the tuned XGBoost model."
    ]
   }
  ],
