--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "84492b15",
+   "metadata": {},
+   "source": [
+    "### Import Required Libraries\n",
+    "Import the necessary libraries for data analysis and visualization."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "31c04675",
    "metadata": {},
    "outputs": [],
@@ -13,13 +22,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9d267ce",
+   "metadata": {},
+   "source": [
+    "### Load the Cleaned Dataset\n",
+    "Load the cleaned cellphone dataset for exploratory data analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "f400cab3",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "resolution",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ppi",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "cpu_core",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "cpu_freq",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "internal_mem",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ram",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "rear_cam",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "front_cam",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "battery",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "price_range",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "cde81efc-3b87-4138-b251-c54acbe72a4b",
+       "rows": [
+        [
+         "0",
+         "2357",
+         "5.2",
+         "424",
+         "8",
+         "1.35",
+         "16.0",
+         "3.0",
+         "13.0",
+         "8.0",
+         "2610",
+         "Mid"
+        ],
+        [
+         "1",
+         "1749",
+         "4.0",
+         "233",
+         "2",
+         "1.3",
+         "4.0",
+         "1.0",
+         "3.15",
+         "0.0",
+         "1700",
+         "Mid"
+        ],
+        [
+         "2",
+         "1916",
+         "4.7",
+         "312",
+         "4",
+         "1.2",
+         "8.0",
+         "1.5",
+         "13.0",
+         "5.0",
+         "2000",
+         "Mid"
+        ],
+        [
+         "3",
+         "1315",
+         "4.0",
+         "233",
+         "2",
+         "1.3",
+         "4.0",
+         "0.512",
+         "3.15",
+         "0.0",
+         "1400",
+         "Low"
+        ],
+        [
+         "4",
+         "2137",
+         "5.5",
+         "401",
+         "4",
+         "2.3",
+         "16.0",
+         "2.0",
+         "16.0",
+         "8.0",
+         "2500",
+         "Mid"
+        ]
+       ],
+       "shape": {
+        "columns": 11,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -143,20 +302,28 @@
        "4        8.0     2500         Mid  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load the dataset\n",
-    "df = pd.read_csv('C:\\\\xampp\\\\htdocs\\\\git\\\\MobilePhonePricePrediction\\\\Data\\\\Clean\\\\cleaned_cellphone.csv')\n",
+    "df = pd.read_csv('../Data/Clean/cleaned_cellphone.csv')\n",
     "df.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8e2cfc4",
+   "metadata": {},
+   "source": [
+    "### Data Overview\n",
+    "Display information and summary statistics about the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "351b085b",
    "metadata": {},
    "outputs": [
@@ -186,6 +353,147 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "resolution",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ppi",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "cpu_core",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "cpu_freq",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "internal_mem",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ram",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "rear_cam",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "front_cam",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "battery",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "price_range",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "7f898a3a-80ff-42cf-ac3c-96074ba34f73",
+       "rows": [
+        [
+         "0",
+         "2357",
+         "5.2",
+         "424",
+         "8",
+         "1.35",
+         "16.0",
+         "3.0",
+         "13.0",
+         "8.0",
+         "2610",
+         "Mid"
+        ],
+        [
+         "1",
+         "1749",
+         "4.0",
+         "233",
+         "2",
+         "1.3",
+         "4.0",
+         "1.0",
+         "3.15",
+         "0.0",
+         "1700",
+         "Mid"
+        ],
+        [
+         "2",
+         "1916",
+         "4.7",
+         "312",
+         "4",
+         "1.2",
+         "8.0",
+         "1.5",
+         "13.0",
+         "5.0",
+         "2000",
+         "Mid"
+        ],
+        [
+         "3",
+         "1315",
+         "4.0",
+         "233",
+         "2",
+         "1.3",
+         "4.0",
+         "0.512",
+         "3.15",
+         "0.0",
+         "1400",
+         "Low"
+        ],
+        [
+         "4",
+         "2137",
+         "5.5",
+         "401",
+         "4",
+         "2.3",
+         "16.0",
+         "2.0",
+         "16.0",
+         "8.0",
+         "2500",
+         "Mid"
+        ]
+       ],
+       "shape": {
+        "columns": 11,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -309,21 +617,29 @@
        "4        8.0     2500         Mid  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Display information about the DataFrame\n",
     "df.info()\n",
     "df.describe()\n",
     "df.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b5affeb",
+   "metadata": {},
+   "source": [
+    "### Price Distribution\n",
+    "Visualize the distribution of handphone prices."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "1362d424",
    "metadata": {},
    "outputs": [
@@ -339,7 +655,6 @@
     }
    ],
    "source": [
-    "# Plotting the distribution of the 'price' column\n",
     "plt.figure(figsize=(8,5))\n",
     "sns.histplot(df['price'], kde=True)\n",
     "plt.title('Handphone Price Distribution')\n",
@@ -349,8 +664,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0757ed2",
+   "metadata": {},
+   "source": [
+    "### Numeric Features Distribution\n",
+    "Visualize the distribution of all numeric features in the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "f540ffc0",
    "metadata": {},
    "outputs": [
@@ -366,15 +690,23 @@
     }
    ],
    "source": [
-    "# Plotting the distribution of all numeric features\n",
     "df.hist(figsize=(15,10), bins=20)\n",
     "plt.suptitle(\"Numeric Features Distribution\")\n",
     "plt.show()\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bdc1678d",
+   "metadata": {},
+   "source": [
+    "### Correlation Heatmap\n",
+    "Show the correlation heatmap of numeric features."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "44914d48",
    "metadata": {},
    "outputs": [
@@ -390,7 +722,6 @@
     }
    ],
    "source": [
-    "# Plotting the correlation heatmap of numeric features\n",
     "plt.figure(figsize=(12,10))\n",
     "sns.heatmap(df.select_dtypes(include='number').corr(), annot=True, cmap='coolwarm', fmt='.2f')\n",
     "plt.title('Correlation Heatmap of Numeric Features')\n",
@@ -398,8 +729,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1506d2b7",
+   "metadata": {},
+   "source": [
+    "### Price Range Distribution\n",
+    "Visualize the distribution of prices across different price ranges."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "bb134100",
    "metadata": {},
    "outputs": [
@@ -415,7 +755,6 @@
     }
    ],
    "source": [
-    "# Plotting handphone price range distribution\n",
     "plt.figure(figsize=(8,5))\n",
     "sns.boxplot(x='price_range', y='price', data=df)\n",
     "plt.title('Price range distribution')\n",
@@ -423,8 +762,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3947818",
+   "metadata": {},
+   "source": [
+    "### Feature vs Price Scatter Plots\n",
+    "Visualize the relationship between handphone specifications and price."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "efcdf751",
    "metadata": {},
    "outputs": [
@@ -440,7 +788,6 @@
     }
    ],
    "source": [
-    "# Scatter plots for handphone specifications vs price\n",
     "features = ['ram', 'battery', 'rear_cam', 'cpu_freq', 'resolution', 'internal_mem', 'cpu_core', 'front_cam']\n",
     "plt.figure(figsize=(16,10))\n",
     "for i, col in enumerate(features):\n",
@@ -453,8 +800,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "841c7a85",
+   "metadata": {},
+   "source": [
+    "### Pairplot of Features and Price\n",
+    "Show pairwise relationships between selected features and price."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "8684ed2f",
    "metadata": {},
    "outputs": [
@@ -470,14 +826,22 @@
     }
    ],
    "source": [
-    "# Pairplot for selected features and price\n",
     "sns.pairplot(df, vars=features + ['price'])\n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f69454f8",
+   "metadata": {},
+   "source": [
+    "### Outlier Check\n",
+    "Check for outliers in selected numeric features."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "be6a8962",
    "metadata": {},
    "outputs": [
@@ -503,7 +867,6 @@
     }
    ],
    "source": [
-    "# Outlier check\n",
     "for col in ['battery', 'ram']:\n",
     "    plt.subplot(2, 1, 1 if col == 'battery' else 2)\n",
     "    sns.boxplot(x=df[col])\n",
